Generate client and move some things
