# handlers/get.go
@@ -1,23 +1,0 @@
-package handlers
-
-import (
-	"net/http"
-
-	"github.com/bugg123/golang-microservices/data"
-)
-
-// swagger:route GET /products products listProducts
-// Returns a list of products
-// responses:
-//   200: productsResponse
-
-// GetProducts returns the products from the data store
-func (p *Products) GetProducts(w http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle GET Products")
-	lp := data.GetProducts()
-	err := lp.ToJSON(w)
-	if err != nil {
-		http.Error(w, "Unable to marshal json", http.StatusInternalServerError)
-		return
-	}
-}
