# product-api/swagger.yaml
@@ -62,7 +62,7 @@ info:
 paths:
   /products:
     get:
-      description: Returns a list of products
+      description: Return a list of products from the database
       operationId: listProducts
       responses:
         "200":
@@ -91,7 +91,7 @@ paths:
       tags:
       - products
     put:
-      description: Updates a product in the database
+      description: Update a products details
       operationId: updateProduct
       parameters:
       - description: |-
@@ -102,6 +102,20 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/Product'
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Update a products details
+      operationId: deleteProduct
+      parameters:
       - description: The id of the product for which the operation relates
         format: int64
         in: path
@@ -114,17 +128,26 @@ paths:
           $ref: '#/responses/noContentResponse'
         "404":
           $ref: '#/responses/errorResponse'
-        "422":
-          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
-  /products/{id}:
-    delete:
-      description: Deletes a product from the database
-      operationId: deleteProduct
+    get:
+      description: Return a list of products from the database
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
-        "201":
-          $ref: '#/responses/noContent'
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
